[package]
name = "clis"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "a simpl search/fuzy finder"
repository = "https://github.com/propbreakerfpv/clis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
